styles/insta.module.sass
@import 'styles/sass/colors'
@import 'styles/sass/variables'
@import 'styles/sass/mixins'

// Global styles
.desktopOnly
  display: block
.mobileOnly
  +Hidden
.main
  height: 100%
  padding: 86px 0 0 0
  background-color: #FFFFFF
.sectionTitle
  +Bold
  font-size: 22px
  color: $primary
  text-align: center
  margin: 0
.sectionParagraphe
  +Regular
  font-size: 20px
  color: #84848A
  text-align: center
.mainSectionMiniHeader
  +Bold
  font-size: 38px
  color: $primary
  line-height: 48px
.mainSectionHeader
  +Black
  font-size: 80px
  color: $primary
  margin: 0
  line-height: 87px
.mainSectionParagraphe
  +Regular
  font-size: 38px
  color: $primary
.mainSectionActionButton
  width: 220px !important
.secondSection
  padding: 80px 60px 80px 60px
  margin-top: 0 !important
  background-color: #FBFBFB
.secondSectionHeader
  +Bold
  font-size: 38px
  color: $primary
  line-height: 48px
  text-align: center
  max-width: 382px
.secondSectionDot
  +Bold
  font-size: 38px
  color: #FF9DBF
  line-height: 38px
.thirdSectionBox
  background-color: $primary
  padding-top: 63px
  padding-bottom: 63px
.thirdSectionHeader
  +Medium
  font-size: 32px
  color: #FFFFFF
  line-height: 48px
  margin: 0
.thirdSectionActionButton
  background-color: $primary !important
  color: #FFFFFF !important
  width: 220px !important
  border: 1px solid #FFFFFF !important
@media #{$tablette}
  .desktopOnly
    +Hidden
  .mobileOnly
    display: block
  .main
    padding: 16px 0 0 0 !important
  .mobilePadding
    padding-left: 25px
    padding-right: 25px
  .sectionMobileStack
    flex-direction: column
    align-items: center
  .mobileRootMain
    padding-bottom: 25px
    flex-direction: column
    align-items: center
  .sectionMobileStackPartTwo
    @extend .sectionMobileStack
    margin-top: 0 !important
  .implyPawMobile
    width: 175px
    height: 281px
  .mobileHeaderLeft
    margin-left: 0 !important
  .mainSectionMiniHeader
    +SemiBold
    font-size: 20px
    letter-spacing: 0.02em
    line-height: 30px
  .mainSectionHeader
    +Bold
    font-size: 40px
    line-height: 51px
  .mainSectionParagraphe
    +Regular
    font-size: 20px
    line-height: 30px
    letter-spacing: 0.02em
  .secondSection
    padding: 25px
  .secondSectionDot
    font-size: 33px
    line-height: 42px
    max-width: 100% !important
    margin: 0 !important
  .secondSectionHeader
    margin: 0 !important
    letter-spacing: -0.05em
  .secondSectionMobileRootStack
    margin-top: 84px !important
  .mobileRootSection
    margin-bottom: 84px
  .thirdSectionBox
    padding: 66px 25px 45px 25px
  .thirdSectionHeader
    +SemiBold
    margin-top: 34px
    font-size: 22px
    letter-spacing: -0.01em
    line-height: 29px
    text-align: center
  .mobileThirdSection
    margin: 0 !important
  .actionButtonRootBox
    align-self: center !important
// @media #{}
// @media #{}

